Java 11 upgrade changes